# Rust-data-engineering

./: CONTRIBUTING.md  README.md
.github/workflows/: lint.yml  release.yml  rustfmt.yml  tests.yml
Module1-Rust-Data-Structures/: README.md
Module1-Rust-Data-Structures/binaryheap-fruit/src/: main.rs
Module1-Rust-Data-Structures/btreeset-fruit/: Cargo.toml
Module1-Rust-Data-Structures/btreeset-fruit/src/: main.rs
Module1-Rust-Data-Structures/cli-salad/: Cargo.toml
Module1-Rust-Data-Structures/cli-salad/src/: lib.rs  main.rs
Module1-Rust-Data-Structures/community-detection/src/: lib.rs  main.rs
Module1-Rust-Data-Structures/exercises/csv_stats/: Cargo.toml  data.csv
Module1-Rust-Data-Structures/exercises/graph_check/: Cargo.toml
Module1-Rust-Data-Structures/exercises/grocery-list/: Cargo.toml
Module1-Rust-Data-Structures/graph-visualize/: Cargo.toml  data.txt
Module1-Rust-Data-Structures/hashset-fruit/: Cargo.toml
Module1-Rust-Data-Structures/linked-list-fruit-salad/: Cargo.toml  Makefile
Module1-Rust-Data-Structures/lisbon-shortest-path/: Cargo.toml
Module1-Rust-Data-Structures/pagerank/: Cargo.toml
Module1-Rust-Data-Structures/vecdeque-fruit-salad/: Cargo.toml
Module2-Safety-Security-Concurrency/: README.md
Module2-Safety-Security-Concurrency/Challenges/challenge_2/: Cargo.toml
Module2-Safety-Security-Concurrency/Challenges/challenge_2/src/: main.rs
Module2-Safety-Security-Concurrency/cli-customize-fruit-salad/: Cargo.toml
Module3-Data-Engineering-Libraries-Tools/: README.md
Module4-Advanced-Applications/: README.md
(+38 files in other folders)
